# ME7751

./: .gitignore
HW1/: main  main.inp  make.sh  output.csv  plots.m
HW1/HW1Submission_wilfong/HW1_root/: CMakeLists.txt  README.md  main.inp  make.sh
HW1/HW1Submission_wilfong/HW1_root/plots/: plots.asv  plots.m
HW1/HW1Submission_wilfong/HW1_root/src/: m_global_parameters.f90  m_helpers.f90  m_linear_algebra.f90  p_main.f90
HW1/data/: plots.m
HW1/src/: m_global_parameters.f90  m_helpers.f90  m_linear_algebra.f90  p_main.f90
HW1/writeup/: homework.aux  homework.fdb_latexmk  homework.fls  homework.out  homework.tex
HW2/: CMakeLists.txt  homework.aux  homework.tex  main  main.inp  make.sh
HW2/HW2_Submission/HW2_root/: main  main.inp
HW2/HW2_Submission/HW2_root/plots/: plots.asv  plots.m
HW2/HW2_Submission/HW2_root/src/: m_global_parameters.f90  m_helpers.f90  m_iterative_methods.f90  p_main.f90
HW2/data/: plots.m
HW2/figures/: tikz_preamble.tex
HW2/figures/partb/: fig.tex
HW2/src/: .p_main.f90.swp  derived_types.h  helpers.c  helpers.h  iterative_solvers.c  iterative_solvers.h  m_global_parameters.f90  m_helpers.f90  m_iterative_methods.f90  main.c  p_main.f90
HW2/writeup/: homework.aux  homework.fdb_latexmk  homework.fls  homework.out  homework.tex
HW3/: main  main.inp
HW3/HW3Submission/HW3_root/data/: plots.m
HW3/HW3Submission/HW3_root/src/: m_global_parameters.f90  m_linear_algebra.f90  p_main.f90
HW3/data/: plots.asv
HW3/src/: m_helpers.f90
HW3/writeup/: P2.eps  P3.eps  P4.eps  P5.eps  P7.eps  homework.aux  homework.fdb_latexmk  homework.fls  homework.out  homework.tex
HW4/: CMakeLists.txt  main  main.inp
HW4/data/: output_0.vtr  output_1.vtr
HW4/src/: m_finite_difference.f90  m_global_parameters.f90  m_helpers.f90  m_vtk.f90  p_main.f90
HW4/writeup/: \  homework.aux  homework.fdb_latexmk  homework.fls  homework.out  homework.tex
